Updated SCSS and cshtml for jump fix

--- a/DFC.Digital/DFC.Digital.Web.Sitefinity/ResourcePackages/gds_toolkit/assets/src/frontend/sass/includes/_filters.scss
+++ b/DFC.Digital/DFC.Digital.Web.Sitefinity/ResourcePackages/gds_toolkit/assets/src/frontend/sass/includes/_filters.scss
@@ -14,67 +14,71 @@
         flex-wrap: wrap;
         margin-bottom: 40px;
 
+        .filter-option {
+            flex: 1;
+            min-width: 100%;
+            max-width: 100%;
+            margin: 10px 1%;
 
-
-        input[type=checkbox], input[type=radio] {
-            display: block;
-            height: 0;
-            width: 0;
-            position: relative;
-            opacity: 0;
-            margin: 0;
-            outline: none !important;
-            cursor: pointer;
-
-            &:focus {
-                outline: none;
-                border: none;
-
-                + input + label, + label {
-                    outline: 3px solid $yellow;
-                }
+            @include media(tablet) {
+                min-width: 48%;
+                max-width: 48%;
             }
 
-            & + input + label, & + label {
-                flex: 1;
-                min-width: 100%;
-                max-width: 100%;
-                margin: 10px 1%;
-                padding: 20px;
-                background-color: darken($grey-4, 5%);
-                @include bold-19;
-                color: $grey-1;
-                box-sizing: border-box;
-                min-height: 100px;
-                float: left;
+            @include media(desktop) {
+                min-width: 31.333%;
+                max-width: 31.333%;
+            }
+
+            input[type=checkbox], input[type=radio] {
+                display: block;
+                height: 0;
+                width: 0;
+                position: relative;
+                opacity: 0;
+                margin: 0;
+                outline: none !important;
                 cursor: pointer;
 
-                @include media(tablet) {
-                    min-width: 48%;
-                    max-width: 48%;
+                &:focus {
+                    outline: none;
+                    border: none;
+
+                    + input + label, + label {
+                        outline: 3px solid $yellow;
+                    }
                 }
 
-                @include media(desktop) {
-                    min-width: 31.333%;
-                    max-width: 31.333%;
-                }
-
-                &:hover {
-                    background-color: darken($grey-4, 10%);
-                    cursor: pointer;
-                }
-
-                span {
-                    width: 100%;
-                    display: inline-block;
-                    @include core-16;
-                }
-            }
-
-            &:checked {
                 & + input + label, & + label {
-                    background: $careers-turquoise;
-                    color: $white;
+                    background-color: darken($grey-4, 5%);
+                    @include bold-19;
+                    color: $grey-1;
+                    box-sizing: border-box;
+                    min-height: 100px;
+                    float: left;
+                    cursor: pointer;
+                    padding: 20px;
+                    min-width: 100%;
+                    max-width: 100%;
+                    height: 100%;
+
+                    &:hover {
+                        background-color: darken($grey-4, 10%);
+                        cursor: pointer;
+                    }
+
+                    span {
+                        width: 100%;
+                        display: inline-block;
+                        @include core-16;
+                    }
+                }
+
+                &:checked {
+                    & + input + label, & + label {
+                        background: $careers-turquoise;
+                        color: $white;
+                    }
                 }
             }
         }
